--- a/aws-cdk-link-shortener/package.json
+++ b/aws-cdk-link-shortener/package.json
@@ -42,6 +42,7 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
@@ -60,9 +61,12 @@
     "@aws-sdk/client-sqs": "^3.496.0",
     "@aws-sdk/lib-dynamodb": "^3.496.0",
     "@aws-sdk/util-dynamodb": "^3.496.0",
+    "@types/cors": "^2.8.19",
     "aws-cdk-lib": "2.125.0",
     "constructs": "^10.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "dynamodb-local": "^0.0.35",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.3.7",
